@@ -1,3 +1,8 @@
+2004-05-14  Xavier Ordoquy  <xordoquy@wanadoo.fr>
+
+	* src/planner-python-plugin.c:
+	Changed the python interpreter management.
+
 2004-05-12  Tomasz Kłoczko <kloczek@pld.org.pl>
 
 	* autogen.sh: allow use autogen.sh not only in automake 1.7.x enviroment.
